@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>207</width>
-    <height>289</height>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -61,6 +61,20 @@
    </item>
    <item>
     <widget class="QTableView" name="TagView" />
+   </item>
+   <item>
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>Selected items</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QListWidget" name="SelectionList" >
+     <property name="selectionMode" >
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
